# simple-compiler

./: CMakeLists.txt  LICENSE  README.md  windows
.circleci/: config.yml
samples/simple_sdl/: events  events.src  gesture.src  joystick.src  keyboard  keyboard.src  keycode  keycode.src  libs.src  main  main.src  rect  render  render.src  scancode  sdl  sdl.src  touch.src  video  video.src
samples/simple_sdl_windows/: main  sdl
samples/simple_windows/: main  main.src  memory  memory.src  windows
src/: architecture.h  arena.cpp  arena.h  array.h  ast.cpp  ast.h  c_backend.cpp  c_backend.h  c_generator.cpp  c_generator.h  calling_convention.cpp  calling_convention.h  compiler.cpp  constant.cpp  constant.h  generator.cpp  generator.h  hl_generator.cpp  hl_generator.h  hl_llvm_backend.cpp  hl_llvm_backend.h  hlir.cpp  hlir.h  ir.cpp  ir.h  ir_generator.cpp  ir_generator.h  jobs.h  lexer.cpp  lexer.h  list.h  llvm_backend.cpp  llvm_backend.h  main.c  main.cpp  parser.cpp  parser.h  path.cpp  path.h  platform.cpp  (+24 more)
src/runtimes/: runtime_emscripten.c  runtime_emscripten_wasm32.c  runtime_linux.c  runtime_linux_riscv32.c  runtime_linux_x64.c  runtime_linux_x86.c  runtime_wasi_wasm32.c  runtime_windows.c  runtime_windows_x64.c  runtime_windows_x86.c
stdlib/: arena.src  expanding_arena.src  heap.src  linux.src  memory.src  windows.src
tests/: bitshift_operators.src  bitwise_operators  bitwise_operators.src  boolean_operators  constant_arrays  constant_arrays.src  constant_bitshift_operators  constant_bitwise_operators  constant_bitwise_operators.src  constant_boolean_operators  constant_boolean_operators.src  constant_equality_test  constant_integer_arithmetic  constant_integer_arithmetic.src  constant_integer_casts  constant_pointer_casts  enums  equality_test  equality_test.src  extern_libs_linux.src  extern_libs_win32  extern_libs_win32.src  function_call  function_call.src  function_parameters  if_statements  if_statements.src  integer_arithmetic  integer_casts  local_declarations  main_return  main_return.src  named_constants  named_constants.src  out_of_order  pointer_casts  polymorphic_functions  static_arrays  static_arrays.src  structs.src  (+8 more)
tests/imports/: main  main.src  test.src
